fix little typo in README

--- a/README
+++ b/README
@@ -11,7 +11,7 @@ see the COPYING file
 3. DOCUMENTATION
 ----------------
 
-I am really sure that you want do write one :)
+I am really sure that you want to write one :)
 
 4. CONTACT
 ----------
