Update my mail address

--- a/README
+++ b/README
@@ -16,7 +16,7 @@ I am really sure that you want to write one :)
 4. CONTACT
 ----------
 
-MAIL:	sven.eckelmann@gmx.de
+MAIL:	sven@narfation.org
 WWW: 	http://gitorious.org/projects/wireshark-esp
 
 Any Feedback is welcome!!
